--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
                 <ul>
                     <li><a href="https://javier575.github.io/jerseys-menu/">INICIO</a></li>
-                    <li><a href="pag2.html">NFL</a></li>
-                    <li><a href="pag3.html">MLB</a></li>
+                    <li><a href="https://javier575.github.io/jersey-nfl/">NFL</a></li>
+                    <li><a href="https://javier575.github.io/jerseys-mlb/">MLB</a></li>
                     <li><a href="pag4.html">FUTBOL EUROPEO</a></li>
                     <li><a href="pag5.html">CARRITO</a></li>
                 </ul>
