--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <h1>NFL</h1>
         <marquee>!Aqui encontraras las camisetas de tus deportes favoritos y equipos favoritos¡ 🚀</marquee>
         <nav>
-                <ul>
-                    <li><a href="https://javier575.github.io/jerseys-menu/">INICIO</a></li>
-                    <li><a href="https://javier575.github.io/jersey-nfl/">NFL</a></li>
-                    <li><a href="https://javier575.github.io/jerseys-mlb/">MLB</a></li>
-                    <li><a href="pag4.html">FUTBOL EUROPEO</a></li>
-                    <li><a href="pag5.html">CARRITO</a></li>
-                </ul>
+            <ul>
+                <li><a href="https://javier575.github.io/jerseys-menu/">INICIO</a></li>
+                <li><a href="https://javier575.github.io/jersey-nfl/">NFL</a></li>
+                <li><a href="https://javier575.github.io/jerseys-mlb/">MLB</a></li>
+                <li><a href="https://javier575.github.io/jerseys-europa/">FUTBOL EUROPEO</a></li>
+                <li><a href="https://javier575.github.io/jerseys-carrito/">CARRITO</a></li>
+            </ul>
         </nav>
     </header>
     <section id="productos">
